# ChangeLog for net-p2p/apollon
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/apollon/Attic/ChangeLog,v 1.4 2004/03/10 02:53:51 caleb Exp $

*apollon-0.9.2 (09 Mar 2004)

  09 Mar 2004; Caleb Tennis <caleb@gentoo.org> apollon-0.9.2.ebuild:
  Version bump

*apollon-0.9.1 (30 Nov 2003)

  30 Nov 2003; Caleb Tennis <caleb@gentoo.org> apollon-0.9.1.ebuild:
  New version, see bug 34703

*apollon-0.9 (18 Oct 2003)

  18 Oct 2003; Sergey Kuleshov <svyatogor@gentoo.org> apollon-0.9.ebuild,
  metadata.xml:
  Initial commit of the ebuild. Thus closing bugs #27186 and #30377.
