@@ -1,6 +1,8 @@
-MD5 a724ef0a31abc12126da88c644e81447 apollon-0.9.2.ebuild 460
 MD5 626014f0799a1db383937e65bd13800a ChangeLog 643
-MD5 14a961a732705ccf4bbd0a39e43fbf18 metadata.xml 324
 MD5 d95e970a0e6fbd010805ca9296ac72f2 apollon-0.9.1.ebuild 466
-MD5 470c5ceb4e7c5dca58dcab7d04374317 files/digest-apollon-0.9.1 66
+MD5 fdaf2c31c9bd3faf05ba5a14711897bd apollon-0.9.3.ebuild 467
+MD5 14a961a732705ccf4bbd0a39e43fbf18 metadata.xml 324
+MD5 a724ef0a31abc12126da88c644e81447 apollon-0.9.2.ebuild 460
 MD5 6e27b2a547a0634cc0e6f76f4023e62d files/digest-apollon-0.9.2 66
+MD5 470c5ceb4e7c5dca58dcab7d04374317 files/digest-apollon-0.9.1 66
+MD5 fe7f93bd8d055839d23c31f064581c0c files/digest-apollon-0.9.3 68
